tests/baselines/reference/pathMappingBasedModuleResolution4_node.errors.txt
c:/root/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== c:/root/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": "."
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
        }
    }
    
==== c:/root/folder1/file1.ts (0 errors) ====
    import {x} from "folder2/file2"
    declare function use(a: any): void;
    use(x.toExponential());
    
==== c:/root/folder2/file2.ts (0 errors) ====
    import {x as a} from "./file3"  // found with baseurl
    import {y as b} from "file4"    // found with fallback
    export var x = a + b;
    
==== c:/root/folder2/file3.ts (0 errors) ====
    export var x = 1;
    
==== c:/node_modules/file4/index.d.ts (0 errors) ====
    export var y: number;